test/corpus/block.txt
================================================================================
Unchecked Block
================================================================================

contract Example {
    function test(int256 n) returns (uint256) {
        unchecked {
            return uint256(0);
        }
    }
}

--------------------------------------------------------------------------------

(source_file
  (contract_declaration
    name: (identifier)
    body: (contract_body
      (function_definition
        name: (identifier)
        (parameter
          type: (type_name
            (primitive_type))
          name: (identifier))
        return_type: (return_type_definition
          (parameter
            type: (type_name
              (primitive_type))))
        body: (function_body
          (statement
            (block_statement
              (unchecked)
              (statement
                (return_statement
                  (expression
                    (type_cast_expression
                      (primitive_type)
                      (call_argument
                        (expression
                          (number_literal))))))))))))))

================================================================================
Regular Block
================================================================================

contract Example {
    function test(int256 n) returns (uint256) {
        {
            return uint256(0);
        }
    }
}

--------------------------------------------------------------------------------

(source_file
  (contract_declaration
    name: (identifier)
    body: (contract_body
      (function_definition
        name: (identifier)
        (parameter
          type: (type_name
            (primitive_type))
          name: (identifier))
        return_type: (return_type_definition
          (parameter
            type: (type_name
              (primitive_type))))
        body: (function_body
          (statement
            (block_statement
              (statement
                (return_statement
                  (expression
                    (type_cast_expression
                      (primitive_type)
                      (call_argument
                        (expression
                          (number_literal))))))))))))))
