test/corpus/pragma.txt
====================
Pragma Any
====================

pragma experimental;

---

(source_file
  (pragma_directive))

====================
Pragma Directive
====================

pragma solidity 0.4.0;

---

(source_file
  (pragma_directive (solidity_pragma_token)))

====================
Multiple Pragma Directives
====================

pragma solidity 0.4.0 0.5.0;

---

(source_file
  (pragma_directive (solidity_pragma_token)))

====================
Equality Pragma Directives
====================

pragma solidity <0.4.0 ^0.5.0 ~0.5;
pragma solidity =0.4;


---

(source_file
  (pragma_directive (solidity_pragma_token))
  (pragma_directive (solidity_pragma_token)))
